--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aea-Hc-XXF">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Start-->
@@ -294,13 +295,60 @@
                     <view key="view" contentMode="scaleToFill" id="GdB-xv-KfT">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="jIQ-mB-HAb">
+                                <rect key="frame" x="0.0" y="64" width="600" height="440"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="uaX-MT-a6A"/>
+                                </constraints>
+                            </tableView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O0c-nk-wuR">
+                                <rect key="frame" x="16" y="512" width="504" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I5v-iS-XAi">
+                                <rect key="frame" x="528" y="512" width="56" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="G8C-1e-6SN"/>
+                                    <constraint firstAttribute="width" constant="56" id="mR3-OD-kte"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Send">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendButton:" destination="6BJ-by-hY3" eventType="touchUpInside" id="Xfk-K3-0y0"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="jIQ-mB-HAb" secondAttribute="centerX" id="0PG-S8-EeS"/>
+                            <constraint firstItem="jIQ-mB-HAb" firstAttribute="top" secondItem="GdB-xv-KfT" secondAttribute="top" constant="64" id="2W1-9m-s3Z"/>
+                            <constraint firstItem="jIQ-mB-HAb" firstAttribute="top" secondItem="VLh-IK-7ts" secondAttribute="bottom" id="4Qe-je-ep0"/>
+                            <constraint firstAttribute="bottom" secondItem="O0c-nk-wuR" secondAttribute="bottom" constant="58" id="EjJ-IG-gf0"/>
+                            <constraint firstItem="O0c-nk-wuR" firstAttribute="top" secondItem="jIQ-mB-HAb" secondAttribute="bottom" constant="8" id="G3k-Jm-vJa"/>
+                            <constraint firstItem="I5v-iS-XAi" firstAttribute="leading" secondItem="O0c-nk-wuR" secondAttribute="trailing" constant="8" symbolic="YES" id="KCw-tv-Toe"/>
+                            <constraint firstItem="I5v-iS-XAi" firstAttribute="top" secondItem="O0c-nk-wuR" secondAttribute="top" id="N7i-ZL-vbN"/>
+                            <constraint firstItem="eqM-S3-FnW" firstAttribute="top" secondItem="O0c-nk-wuR" secondAttribute="bottom" constant="9" id="VSk-Xo-cL2"/>
+                            <constraint firstItem="I5v-iS-XAi" firstAttribute="top" secondItem="jIQ-mB-HAb" secondAttribute="bottom" constant="8" id="eKn-BU-gze"/>
+                            <constraint firstItem="eqM-S3-FnW" firstAttribute="top" secondItem="I5v-iS-XAi" secondAttribute="bottom" constant="9" id="jnY-Dg-4vL"/>
+                            <constraint firstItem="eqM-S3-FnW" firstAttribute="top" secondItem="jIQ-mB-HAb" secondAttribute="bottom" constant="47" id="wTs-gr-hEv"/>
+                            <constraint firstItem="O0c-nk-wuR" firstAttribute="leading" secondItem="GdB-xv-KfT" secondAttribute="leadingMargin" id="xs7-cN-sna"/>
+                            <constraint firstItem="I5v-iS-XAi" firstAttribute="trailing" secondItem="GdB-xv-KfT" secondAttribute="trailingMargin" id="zkm-9q-fg6"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Chat" id="x16-ym-Uuz"/>
+                    <navigationItem key="navigationItem" title="Chat" id="E61-WA-1KK"/>
+                    <connections>
+                        <outlet property="chatField" destination="O0c-nk-wuR" id="2eW-Il-PDk"/>
+                        <outlet property="sendButtonOutlet" destination="I5v-iS-XAi" id="0lZ-Q8-MQp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Th-9z-fjO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1237" y="1299"/>
+            <point key="canvasLocation" x="1947" y="1041"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="04H-1x-Mbq">
@@ -764,7 +812,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n97-ia-nog" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2609" y="1041"/>
+            <point key="canvasLocation" x="3274" y="1041"/>
         </scene>
         <!--Add-->
         <scene sceneID="g6E-QH-4Td">
@@ -838,7 +886,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D4o-5i-R6P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3947" y="1041"/>
+            <point key="canvasLocation" x="4759" y="1041"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="EpN-fJ-7f6">
@@ -854,7 +902,7 @@
                         <segue destination="XeQ-0J-Fby" kind="relationship" relationship="viewControllers" id="Bbd-eI-nBl"/>
                         <segue destination="uVc-qV-5XT" kind="relationship" relationship="viewControllers" id="cts-Og-6g0"/>
                         <segue destination="JdN-7q-oL3" kind="relationship" relationship="viewControllers" id="qpX-H0-EZH"/>
-                        <segue destination="6BJ-by-hY3" kind="relationship" relationship="viewControllers" id="9we-Er-sMR"/>
+                        <segue destination="jvV-aH-ANQ" kind="relationship" relationship="viewControllers" id="9we-Er-sMR"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aOm-vH-com" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -931,7 +979,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UJE-co-eNK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1947" y="1041"/>
+            <point key="canvasLocation" x="2612" y="1041"/>
         </scene>
         <!--Can Help With-->
         <scene sceneID="Hv1-Cq-qh7">
@@ -965,7 +1013,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aj4-A4-OAM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3277" y="1729"/>
+            <point key="canvasLocation" x="3942" y="1729"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="c7G-aQ-2ed">
@@ -988,7 +1036,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eu8-cH-4sV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3277" y="1041"/>
+            <point key="canvasLocation" x="3942" y="1041"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="w90-ZM-scG">
@@ -1011,7 +1059,30 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ktL-9x-9ug" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2609" y="1729"/>
+            <point key="canvasLocation" x="3274" y="1729"/>
+        </scene>
+        <!--Chat-->
+        <scene sceneID="ctd-bX-QuT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jvV-aH-ANQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chat" id="x16-ym-Uuz"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5eM-5z-fL1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6BJ-by-hY3" kind="relationship" relationship="rootViewController" id="FSq-MN-YGV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eja-9B-f0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1191" y="1041"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
