--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -302,6 +302,14 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="600" id="uaX-MT-a6A"/>
                                 </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="2UV-7p-503">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2UV-7p-503" id="dM3-Gk-8au">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O0c-nk-wuR">
                                 <rect key="frame" x="16" y="512" width="504" height="30"/>
@@ -326,24 +334,30 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="jIQ-mB-HAb" secondAttribute="centerX" id="0PG-S8-EeS"/>
-                            <constraint firstItem="jIQ-mB-HAb" firstAttribute="top" secondItem="GdB-xv-KfT" secondAttribute="top" constant="64" id="2W1-9m-s3Z"/>
                             <constraint firstItem="jIQ-mB-HAb" firstAttribute="top" secondItem="VLh-IK-7ts" secondAttribute="bottom" id="4Qe-je-ep0"/>
                             <constraint firstAttribute="bottom" secondItem="O0c-nk-wuR" secondAttribute="bottom" constant="58" id="EjJ-IG-gf0"/>
                             <constraint firstItem="O0c-nk-wuR" firstAttribute="top" secondItem="jIQ-mB-HAb" secondAttribute="bottom" constant="8" id="G3k-Jm-vJa"/>
                             <constraint firstItem="I5v-iS-XAi" firstAttribute="leading" secondItem="O0c-nk-wuR" secondAttribute="trailing" constant="8" symbolic="YES" id="KCw-tv-Toe"/>
                             <constraint firstItem="I5v-iS-XAi" firstAttribute="top" secondItem="O0c-nk-wuR" secondAttribute="top" id="N7i-ZL-vbN"/>
-                            <constraint firstItem="eqM-S3-FnW" firstAttribute="top" secondItem="O0c-nk-wuR" secondAttribute="bottom" constant="9" id="VSk-Xo-cL2"/>
                             <constraint firstItem="I5v-iS-XAi" firstAttribute="top" secondItem="jIQ-mB-HAb" secondAttribute="bottom" constant="8" id="eKn-BU-gze"/>
                             <constraint firstItem="eqM-S3-FnW" firstAttribute="top" secondItem="I5v-iS-XAi" secondAttribute="bottom" constant="9" id="jnY-Dg-4vL"/>
                             <constraint firstItem="eqM-S3-FnW" firstAttribute="top" secondItem="jIQ-mB-HAb" secondAttribute="bottom" constant="47" id="wTs-gr-hEv"/>
                             <constraint firstItem="O0c-nk-wuR" firstAttribute="leading" secondItem="GdB-xv-KfT" secondAttribute="leadingMargin" id="xs7-cN-sna"/>
                             <constraint firstItem="I5v-iS-XAi" firstAttribute="trailing" secondItem="GdB-xv-KfT" secondAttribute="trailingMargin" id="zkm-9q-fg6"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="G3k-Jm-vJa"/>
+                                <exclude reference="jnY-Dg-4vL"/>
+                                <exclude reference="eKn-BU-gze"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Chat" id="E61-WA-1KK"/>
                     <connections>
                         <outlet property="chatField" destination="O0c-nk-wuR" id="2eW-Il-PDk"/>
                         <outlet property="sendButtonOutlet" destination="I5v-iS-XAi" id="0lZ-Q8-MQp"/>
+                        <outlet property="tableView" destination="jIQ-mB-HAb" id="Vml-7J-B1j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Th-9z-fjO" userLabel="First Responder" sceneMemberID="firstResponder"/>
